--- a/template/index.html
+++ b/template/index.html
@@ -1,1 +1,11 @@
+<!-- index.html -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>My Website</title>
+  </head>
+  <body>
+    <h1>Hello Nitish! Welcome to my first GitHub Page 🎉</h1>
+  </body>
+</html>
 
